--- a/app.css
+++ b/app.css
@@ -28,7 +28,7 @@ section {
     left: 0px;
     z-index: 1;
     width: 100%;
-    margin: 0px 0px 40px;
+    padding: 0px 0px 40px;
 }
 
 #list ol {
