--- a/assets/app.css
+++ b/assets/app.css
@@ -186,6 +186,7 @@ header, header nav, header nav button {
 }
 
 header nav button {
+    outline: 0;
     background-color: #db7093;
     width: 33.3333%;
     height: 40px;
@@ -204,7 +205,8 @@ footer nav {
     border: 0px;
 }
 
-footer nav button, footer nav button img {
+footer nav button, footer nav button:focus, footer nav button img {
+    outline: 0;
     padding: 0px;
     margin: 0px;
     border: 0px;
