--- a/assets/app.css
+++ b/assets/app.css
@@ -266,13 +266,6 @@ button {
 	height: 40px;
 }
 
-header nav button:hover {
-    background-color: #ff1493;
-}
-header nav button:active {
-    background-color: #FFFFFF;
-}
-
 #playback {
     width: 210px;
     border: 0px;
@@ -321,13 +314,6 @@ header nav button:active {
 
 #playback button.next img {
     width: 60px;
-}
-
-#playback button:hover {
-    background-color: #ff1493;
-}
-#playback button:active {
-    background-color: #FFFFFF;
 }
 
 #playback_volume input[type="range"] {
@@ -396,4 +382,14 @@ header nav button:active {
     width: 100%;
     height: 40px;
     background-color: #c0c0c0;
+}
+
+button:active img {
+    animation: active_img 2s;
+}
+
+@keyframes active_img {
+0% {opacity: 0.5;}
+50% {opacity: 0.7;}
+100% {opacity: 1.0;}
 }
