--- a/assets/app.css
+++ b/assets/app.css
@@ -229,25 +229,38 @@ section {
 #config ul li {
     position: relative;
     height: 40px;
+    margin-top: 1px;
     border-bottom: dashed 1px #f0f0f0;
 }
 #config ul li .description {
     position: absolute;
-    top: 5px;
-    left: 10px;
-    width: 50%;
+    top: 0px;
+    left: 0px;
     font-size: 18px;
     color: #404040;
-    padding: 4px;
-    vertical-align: middle;
-    height: 30px;
+    padding: 10px 0px;
+    height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
+@media (min-width: 600px) { #config ul li .description {
+    width: 50%;
+}}
+@media (max-width: 600px) { #config ul li .description {
+    width: calc(100% - 100px);
+}}
 
 #config ul li .value {
     position: absolute;
     top: 5px;
-    left: 50%;
 }
+@media (min-width: 600px) { #config ul li .value {
+    left: 50%;
+}}
+@media (max-width: 600px) { #config ul li .value {
+    right: 0px;
+}}
 
 .switch {
     width: 100px;
@@ -513,10 +526,17 @@ button {
     background-color: #c0c0c0;
 }
 
+button:hover img {
+    animation: hover_img 0.5s;
+}
 button:active img {
     animation: active_img 2s;
 }
 
+@keyframes hover_img {
+0% {opacity: 0.5;}
+100% {opacity: 1.0;}
+}
 @keyframes active_img {
 0% {opacity: 0.5;}
 50% {opacity: 0.7;}
