--- a/assets/app.css
+++ b/assets/app.css
@@ -176,7 +176,8 @@ section {
     z-index: -100;
 	background-position: center center; 
 	background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    border-radius: 100%;
 }
 
 @media (orientation: portrait) {
@@ -189,16 +190,16 @@ section {
     }
     #main .elapsed_img, #main .elapsed_img svg {
         left: 0px;
-        top: 70px;
+        top: 0px;
         width: 100%;
-        height: calc(100% - 140px);
+        height: 100%;
     }
     #main .elapsed_img svg {
         height: 100%;
     }
     #current_cover {
-        left: 20%;
-        width: 60%;
+        left: 15%;
+        width: 70%;
     }
 }
 @media (orientation: landscape) {
@@ -208,16 +209,16 @@ section {
         width: 100%;
     }
     #main .elapsed_img {
-        top: 70px;
-        height: calc(100% - 140px);
+        top: 0px;
+        height: 100%;
     }
     #main .elapsed_img svg {
         width: 50%;
         height: 100%;
     }
     #current_cover {
-        left: 60%;
-        width: 30%;
+        left: 57.5%;
+        width: 35%;
     }
 }
 
